Bug 1371228 - Handling SteamVR process quit events to avoid crashes. r=kip, a=jcristau

MozReview-Commit-ID: DBkzz06pRSu